package cn.tunyl.creational.factroymethod;

public class AmericanoCoffee extends Coffee{
    @Override
    public String getName() {
        return "Americano Coffee";
    }
}
